<resources>
    <string name="app_name">Pos GT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Mario Arita</string>
    <string name="nav_header_subtitle">marioarita502@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <!--    Apartado de descripción del menu-->

    <string name="menu_home">Home</string>
    <string name="menu_inventory">Inventario</string>
    <string name="menu_client">Clientes</string>
    <string name="menu_providers">Proveedores</string>
    <string name="menu_orders">Pedidos</string>

    <string name="title_active_login">Pos GT Login</string>
    <string name="password">Contraseña</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="current_password">Contraseña actual</string>
    <string name="name">User Name</string>
    <string name="email">Email</string>
    <string name="email_form">Email</string>
    <string name="email_exam">marioarita502@gmail.com</string>
    <string name="login">Login</string>
    <string name="repeat_password">Confirma la contraseña</string>
    <string name="signup">Sign Up</string>
    <string name="text_signup">No tienes cuenta?</string>
    <string name="link_signup">Sign Up</string>
    <string name="all">TODO</string>
    <string name="user_email">userdefault@gmail.com</string>
    <string name="user_name">User Default</string>
    <string name="update_profile">Guardar</string>
    <string name="delete_account">Eliminar cuenta</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="forget_password">¿olvidaste tu contraseña?</string>
    <string name="title_check_email">Verificacion de Email</string>
    <string name="subtitle_check_email">Para completar su registro. ¡Por favor! verifica su correo y después de clic en continuar.</string>
    <string name="continue_check_email">Continuar</string>
    <string name="title_account_recovery">Recuperación de la cuenta</string>
    <string name="subtitle_account_recovery">Ingresa tu email para que se te pueda enviar un correo con los pasos para cambiar tu contraseña.</string>
    <string name="recovery_account">Enviar</string>
    <string name="title_update_password">Cambio de contraseña</string>
    <string name="subtitle_update_password">Por motivos de seguridad para cambiar tu contraseña, primero debes ingresar tu contraseña actual.</string>
    <string name="title_delete_account">Eliminar cuenta</string>
    <string name="subtitle_delete_account">Por motivos de seguridad para eliminar tu cuenta por completo, debes de ingresar tu contraseña.</string>
    <string name="delete">Eliminar</string>

    <!--    mas textos-->

    <string name="title_main">Lista de productos</string>
    <string name="title_customers">Lista de Clientes</string>
    <string name="sub_title_main">Productos en Inventario</string>
    <string name="date">01/06/2022</string>
    <string name="phone_form">Telefono</string>
    <string name="phone">4670 3443</string>
    <string name="price">Q 40</string>
    <string name="id">AB-1082</string>
    <string name="nit_form">Nit</string>
    <string name="nit">113874200</string>
    <string name="amount">Stock: 10</string>
    <string name="description">Esta es la descripción del producto</string>
    <string name="id_form">Id</string>
    <string name="name_form">Nombre</string>
    <string name="date_form">Fecha</string>
    <string name="price_form">Precio</string>
    <string name="quantity_form">Cantidad</string>
    <string name="action_form">Guardar</string>
    <string name="description_form">Descripción</string>
    <string name="address_form">Dirección</string>
    <string name="address">Aldea Fronteras Rio Dulce, Livingston, Izabal.</string>


    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>