<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

<!--    Navegación para home-->
    <fragment
        android:id="@+id/nav_home"
        android:name="com.polar502.posgt.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

<!--    Navegación para inventario-->
    <fragment
        android:id="@+id/nav_inventory"
        android:name="com.polar502.posgt.ui.inventory.InventoryFragment"
        android:label="@string/menu_inventory"
        tools:layout="@layout/fragment_inventory" />

<!--    Navegación para pedidos-->
    <fragment
        android:id="@+id/nav_orders"
        android:name="com.polar502.posgt.ui.orders.OrdersFragment"
        android:label="@string/menu_orders"
        tools:layout="@layout/fragment_orders" />

<!--    Navegación para Clientes-->
    <fragment
        android:id="@+id/nav_client"
        android:name="com.polar502.posgt.ui.client.ClientFragment"
        android:label="@string/menu_client"
        tools:layout="@layout/fragment_client" />
</navigation>