<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="0.5dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/posterCardView">
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/phoneTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/phone"
        android:textColor="@color/purple_200"
        android:textSize="18sp"
        android:fontFamily="sans-serif-medium"
        android:elevation="5dp"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="@+id/cardView" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="245dp"
        android:layout_height="30dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/name"
        android:textSize="16sp"
        android:textColor="@color/black_500"
        android:elevation="5dp"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toEndOf="@+id/posterCardView"
        app:layout_constraintTop_toBottomOf="@+id/phoneTextView" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="245dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:elevation="5dp"
        android:text="@string/email_exam"
        android:textColor="@color/teal_200"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintStart_toEndOf="@+id/posterCardView"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/posterCardView"
        android:layout_width="86dp"
        android:layout_height="140dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/posterImgeView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/all"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ori" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_gradient_white" />
    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>